--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "preview": "vite preview"
   },
   "engines": {
     "node": "20.x"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^5.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "vite": "^7.1.11",
-    "@vitejs/plugin-react": "^5.0.4"
+    "vite": "^7.1.11"
   }
 }
