--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-    "build": {
-      "env": {
-        "NODE_ENV": "development"
-      },
-      "command": "npm run build",
-      "outputDirectory": "dist"
-    }
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
+      }
+    ]
   }
   
