--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Portfolio Francia",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,10 +12,12 @@
     "node": "20.x"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^5.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "vite": "^7.1.11"
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "vite": "^7.1.11",
+    "@vitejs/plugin-react": "^5.0.4"
   }
 }
